--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <input type="text" name="text1" id="text1" placeholder="Enter First Number"> 
             <input type="text" name="text2" id="text2" placeholder="Enter Second Number"> 
             <select id="operator">
+                <option value="Operators" selected disabled>Operators</option>
                 <option value="+"> + </option>
                 <option value="-"> - </option>
                 <option value="*"> * </option>
